--- a/client/src/components/mainpages/history/history.css
+++ b/client/src/components/mainpages/history/history.css
@@ -29,3 +29,12 @@ table a{
     height: 100px;
     object-fit: cover;
 }
+.checkdox {
+    width: 20px;
+    height: 20px;
+}
+.td {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
